--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Cancha360</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- En el head, debajo de Bootstrap -->
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body class="bg-dark text-white d-flex flex-column justify-content-center align-items-center vh-100">
 
@@ -17,5 +19,7 @@
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  <!-- Justo antes de cerrar el body -->
+  <script src="js/app.js"></script>
 </body>
 </html>
