--- a/index.html
+++ b/index.html
@@ -3,23 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cancha360</title>
-  <!-- Bootstrap CSS -->
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"> -->
-  <!-- En el head, debajo de Bootstrap -->
+  <title>Cancha360 - Inicio</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
-<body class="bg-dark text-white d-flex flex-column justify-content-center align-items-center vh-100">
-
-  <div class="text-center">
-    <h1 class="display-4 fw-bold">⚽ Cancha360</h1>
-    <p class="lead">La nueva forma de organizar tus partidos de fútbol con amigos.</p>
-    <a href="#" class="btn btn-success btn-lg mt-3">Próximamente</a>
-  </div>
-
-  <!-- Bootstrap JS -->
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script> -->
-  <!-- Justo antes de cerrar el body -->
+<body>
+  <header>
+    <h1>⚽ Cancha360</h1>
+  </header>
+  <main>
+    <h2>Organiza tus partidos con amigos</h2>
+    <a href="login.html" class="btn-cancha">Entrar</a>
+  </main>
   <script src="js/app.js"></script>
 </body>
 </html>
