--- a/login.html
+++ b/login.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
-    <h1>Ingresar a Cancha360</h1>
+  <header class="text-center my-4">
+    <h1>⚽ Ingresar a Cancha360</h1>
   </header>
 
-  <main>
-    <form id="login-form" class="p-4">
+  <main class="container">
+    <!-- Formulario de login -->
+    <form id="login-form" class="p-4 shadow rounded">
       <div class="mb-3">
         <label class="form-label">Correo</label>
         <input id="email" type="email" class="form-control" placeholder="tu@correo.com" required>
@@ -22,28 +23,32 @@
         <label class="form-label">Contraseña</label>
         <input id="password" type="password" class="form-control" placeholder="******" required>
       </div>
-      <button type="submit" class="btn-cancha">Entrar</button>
+      <button type="submit" class="btn btn-success w-100">Entrar</button>
     </form>
 
+    <!-- Enlace de registro -->
     <p class="text-center mt-3">
       ¿No tienes cuenta? <a href="#" id="signup-link">Regístrate</a>
     </p>
 
+    <!-- Botón de Google -->
+    <div class="text-center mt-3">
+      <button id="google-login" class="btn btn-danger w-100">🔑 Ingresar con Google</button>
+    </div>
+
     <p class="text-center mt-3"><a href="index.html">⬅ Volver al inicio</a></p>
   </main>
 
-  <!-- 📌 Aquí empieza la magia de Supabase -->
+  <!-- Supabase SDK -->
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
-    // Configuración de Supabase (reemplaza con tus datos)
+    // ⚙️ Configuración de Supabase (reemplaza con tus datos)
     const SUPABASE_URL = "https://rcpwypqzahsfsudlkwaf.supabase.co";
     const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjcHd5cHF6YWhzZnN1ZGxrd2FmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MTQwODIsImV4cCI6MjA3NDQ5MDA4Mn0.VPkdTAhTK_tZ6Re_lcdx5E3oxSDS2oYG8YDSATXtcl4";
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
+    // Formulario de login
     const form = document.getElementById("login-form");
-    const signupLink = document.getElementById("signup-link");
-
-    // Login
     form.addEventListener("submit", async (e) => {
       e.preventDefault();
       const email = document.getElementById("email").value;
@@ -55,11 +60,12 @@
         alert("❌ Error: " + error.message);
       } else {
         alert("✅ Bienvenido!");
-        window.location.href = "dashboard.html"; // redirige al dashboard
+        window.location.href = "dashboard.html"; // Redirige al dashboard
       }
     });
 
-    // Registro
+    // Registro de usuario
+    const signupLink = document.getElementById("signup-link");
     signupLink.addEventListener("click", async (e) => {
       e.preventDefault();
       const email = document.getElementById("email").value;
@@ -73,10 +79,21 @@
         alert("✅ Revisa tu correo para confirmar la cuenta!");
       }
     });
-  </script>
-</body>
-</html>
 
- 
+    // Login con Google
+    const googleBtn = document.getElementById("google-login");
+    googleBtn.addEventListener("click", async () => {
+      const { data, error } = await supabase.auth.signInWithOAuth({
+        provider: "google"
+      });
+
+      if (error) {
+        alert("❌ Error con Google: " + error.message);
+      } else {
+        // Supabase redirige automáticamente al callback y luego de vuelta a tu app
+        console.log("🔄 Redirigiendo a Google...");
+      }
+    });
+  </script>
 </body>
 </html>
