--- a/dashboard.html
+++ b/dashboard.html
@@ -3,20 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cancha360 - Dashboard</title>
+  <title>Dashboard - Cancha360</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <header>
-    <h1>Mis Partidos</h1>
-  </header>
-  <main class="p-4">
-    <p>No tienes partidos aún.</p>
-    <a href="create-match.html" class="btn-cancha">➕ Crear Partido</a>
-    <hr>
-    <a href="profile.html" class="btn btn-outline-light">Mi Perfil</a>
-    <a href="index.html" class="btn btn-outline-light">Salir</a>
-  </main>
+  <div class="container mt-5">
+    <h1>Bienvenido a tu Dashboard ⚽</h1>
+    <p id="user-info"></p>
+    <button id="logout" class="btn btn-danger">Cerrar sesión</button>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script>
+    const SUPABASE_URL = "https://rcpwypqzahsfsudlkwaf.supabase.co";
+    const SUPABASE_KEY = "TU_PUBLIC_ANON_KEY"; 
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+    async function checkSession() {
+      const { data: { session } } = await supabase.auth.getSession();
+
+      if (!session) {
+        // 🚫 Si no hay sesión, volver al login
+        window.location.href = "login.html";
+      } else {
+        // ✅ Mostrar info del usuario
+        const user = session.user;
+        document.getElementById("user-info").textContent = 
+          `Has iniciado sesión como: ${user.email}`;
+      }
+    }
+
+    // Cerrar sesión
+    document.getElementById("logout").addEventListener("click", async () => {
+      await supabase.auth.signOut();
+      window.location.href = "login.html";
+    });
+
+    checkSession();
+  </script>
 </body>
 </html>
