--- a/dashboard.html
+++ b/dashboard.html
@@ -39,4 +39,160 @@
 
     <!-- Formulario para crear canchas -->
     <h3 class="mt-4">Crear cancha</h3>
-    <form id="canch
+    <form id="cancha-form" class="mb-4">
+      <div class="mb-3">
+        <label class="form-label">Nombre</label>
+        <input type="text" id="cancha-nombre" class="form-control" placeholder="Ej: Cancha 5 Fútbol 7" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Ubicación</label>
+        <input type="text" id="cancha-ubicacion" class="form-control" placeholder="Ej: Montevideo" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Precio por hora</label>
+        <input type="number" id="cancha-precio" class="form-control" placeholder="Ej: 1200" required>
+      </div>
+      <button type="submit" class="btn btn-primary">Agregar Cancha</button>
+    </form>
+
+    <!-- Lista de canchas -->
+    <h3>Lista de canchas</h3>
+    <ul id="canchas-list" class="list-group mb-4"></ul>
+
+    <button id="logout" class="btn btn-danger">Cerrar sesión</button>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+  <script>
+    const SUPABASE_URL = "https://rcpwypqzahsfsudlkwaf.supabase.co";
+    const SUPABASE_KEY = "🔑 PON AQUÍ TU PUBLIC ANON KEY DE SUPABASE"; 
+    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+    let currentUser = null;
+
+    async function checkSession() {
+      const { data: { session } } = await supabase.auth.getSession();
+
+      if (!session) {
+        window.location.href = "login.html";
+      } else {
+        currentUser = session.user;
+        document.getElementById("user-info").textContent =
+          `Has iniciado sesión como: ${currentUser.email}`;
+        loadReservas();
+        loadCanchas();
+      }
+    }
+
+    // Crear reserva
+    const form = document.getElementById("reserva-form");
+    form.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const cancha_id = document.getElementById("cancha-id").value;
+      const fecha = document.getElementById("fecha").value;
+      const hora_inicio = document.getElementById("hora-inicio").value;
+      const hora_fin = document.getElementById("hora-fin").value;
+
+      const { error } = await supabase.from("reservas").insert([
+        {
+          cancha_id,
+          usuario_id: currentUser.id,
+          fecha,
+          hora_inicio,
+          hora_fin
+        }
+      ]);
+
+      if (error) {
+        alert("❌ Error al crear reserva: " + error.message);
+      } else {
+        alert("✅ Reserva creada!");
+        form.reset();
+        loadReservas();
+      }
+    });
+
+    // Cargar reservas del usuario
+    async function loadReservas() {
+      const { data, error } = await supabase
+        .from("reservas")
+        .select("*")
+        .eq("usuario_id", currentUser.id);
+
+      const lista = document.getElementById("reservas-list");
+      lista.innerHTML = "";
+
+      if (error) {
+        lista.innerHTML = `<li class="list-group-item text-danger">Error: ${error.message}</li>`;
+        return;
+      }
+
+      if (data.length === 0) {
+        lista.innerHTML = `<li class="list-group-item">No tienes reservas aún</li>`;
+        return;
+      }
+
+      data.forEach(r => {
+        const item = document.createElement("li");
+        item.className = "list-group-item";
+        item.textContent = `Cancha ${r.cancha_id} - ${r.fecha} de ${r.hora_inicio} a ${r.hora_fin}`;
+        lista.appendChild(item);
+      });
+    }
+
+    // Crear cancha
+    const canchaForm = document.getElementById("cancha-form");
+    canchaForm.addEventListener("submit", async (e) => {
+      e.preventDefault();
+      const nombre = document.getElementById("cancha-nombre").value;
+      const ubicacion = document.getElementById("cancha-ubicacion").value;
+      const precio = document.getElementById("cancha-precio").value;
+
+      const { error } = await supabase.from("canchas").insert([
+        { nombre, ubicacion, precio }
+      ]);
+
+      if (error) {
+        alert("❌ Error al crear cancha: " + error.message);
+      } else {
+        alert("✅ Cancha creada!");
+        canchaForm.reset();
+        loadCanchas();
+      }
+    });
+
+    // Cargar canchas
+    async function loadCanchas() {
+      const { data, error } = await supabase.from("canchas").select("*");
+
+      const lista = document.getElementById("canchas-list");
+      lista.innerHTML = "";
+
+      if (error) {
+        lista.innerHTML = `<li class="list-group-item text-danger">Error: ${error.message}</li>`;
+        return;
+      }
+
+      if (data.length === 0) {
+        lista.innerHTML = `<li class="list-group-item">No hay canchas cargadas aún</li>`;
+        return;
+      }
+
+      data.forEach(c => {
+        const item = document.createElement("li");
+        item.className = "list-group-item";
+        item.textContent = `${c.nombre} - ${c.ubicacion} - $${c.precio}/hora (ID: ${c.id})`;
+        lista.appendChild(item);
+      });
+    }
+
+    // Cerrar sesión
+    document.getElementById("logout").addEventListener("click", async () => {
+      await supabase.auth.signOut();
+      window.location.href = "login.html";
+    });
+
+    checkSession();
+  </script>
+</body>
+</html>
