--- a/dashboard.html
+++ b/dashboard.html
@@ -64,6 +64,7 @@
 
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
+    
     const SUPABASE_URL = "https://rcpwypqzahsfsudlkwaf.supabase.co";
     const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjcHd5cHF6YWhzZnN1ZGxrd2FmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MTQwODIsImV4cCI6MjA3NDQ5MDA4Mn0.VPkdTAhTK_tZ6Re_lcdx5E3oxSDS2oYG8YDSATXtcl4"; 
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
@@ -139,6 +140,32 @@
         lista.appendChild(item);
       });
     }
+
+
+    // Crear cancha
+const canchaForm = document.getElementById("cancha-form");
+console.log("👉 canchaForm encontrado:", canchaForm); // 👈 debug
+
+canchaForm.addEventListener("submit", async (e) => {
+  e.preventDefault();
+  console.log("🚀 Enviando formulario de cancha..."); // 👈 debug
+
+  const nombre = document.getElementById("cancha-nombre").value;
+  const ubicacion = document.getElementById("cancha-ubicacion").value;
+  const precio = document.getElementById("cancha-precio").value;
+
+  const { error } = await supabase.from("canchas").insert([
+    { nombre, ubicacion, precio }
+  ]);
+
+  if (error) {
+    alert("❌ Error al crear cancha: " + error.message);
+  } else {
+    alert("✅ Cancha creada!");
+    canchaForm.reset();
+    loadCanchas();
+  }
+});
 
     // Crear cancha
     const canchaForm = document.getElementById("cancha-form");
