--- a/dashboard.html
+++ b/dashboard.html
@@ -22,9 +22,10 @@
     <h3>Tus partidos</h3>
     <ul id="reservas-list" class="list-group mb-4"></ul>
 
-    <!-- Partidos disponibles -->
-    <h3>Partidos disponibles</h3>
-    <ul id="partidos-list" class="list-group mb-4"></ul>
+    <!-- Lista de partidos disponibles -->
+    <h3 class="mt-4">Partidos disponibles</h3>
+    <ul id="partidos-disponibles" class="list-group mb-4"></ul>
+
 
     <button id="logout" class="btn btn-danger">Cerrar sesión</button>
   </div>
