--- a/dashboard.html
+++ b/dashboard.html
@@ -61,6 +61,7 @@
       }
 
       loadReservas();
+      loadCanchas();
       loadPartidosDisponibles();
     }
   }
@@ -140,6 +141,7 @@
 
           alert("✅ Te uniste al partido!");
           loadReservas();
+          loadCanchas();
           loadPartidosDisponibles();
         }
       };
