--- a/dashboard.html
+++ b/dashboard.html
@@ -90,69 +90,82 @@
   }
 
   // Partidos disponibles
-  async function loadPartidosDisponibles() {
-    const { data: reservas, error } = await supabase
-      .from("reservas")
-      .select("id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, canchas(nombre)");
+async function loadPartidosDisponibles() {
+  const { data: reservas, error } = await supabase
+    .from("reservas")
+    .select("id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, canchas(nombre)");
 
-    if (error) {
-      console.error("Error cargando reservas:", error.message);
-      return;
-    }
+  console.log("📋 Todas las reservas:", reservas);
 
-    const { data: misPartidos } = await supabase
-      .from("reservas_usuarios")
-      .select("reserva_id")
-      .eq("usuario_id", currentUser.id);
-
-    const idsOcupados = misPartidos ? misPartidos.map(r => r.reserva_id) : [];
-
-    const disponibles = reservas.filter(r =>
-      !idsOcupados.includes(r.id) && r.cupo_actual < r.cupo_max
-    );
-
-    const lista = document.getElementById("partidos-disponibles");
-    lista.innerHTML = "";
-
-    if (disponibles.length === 0) {
-      lista.innerHTML = `<li class="list-group-item">No hay partidos disponibles</li>`;
-      return;
-    }
-
-    disponibles.forEach(r => {
-      const item = document.createElement("li");
-      item.className = "list-group-item d-flex justify-content-between align-items-center";
-      item.innerHTML = `
-        <span>${r.canchas.nombre} - ${r.fecha} ${r.hora_inicio} | Cupo: ${r.cupo_actual}/${r.cupo_max}</span>
-        <button class="btn btn-sm btn-primary">Unirme</button>
-      `;
-
-      item.querySelector("button").addEventListener("click", async () => {
-        const { error } = await supabase
-          .from("reservas_usuarios")
-          .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
-
-        if (error) {
-          if (error.message.includes("duplicate key")) {
-            alert("⚠️ Ya estás unido a este partido.");
-          } else {
-            alert("❌ Error al unirse: " + error.message);
-          }
-        } else {
-          await supabase
-            .from("reservas")
-            .update({ cupo_actual: r.cupo_actual + 1 })
-            .eq("id", r.id);
-
-          alert("✅ Te uniste al partido!");
-          loadReservas();
-          loadPartidosDisponibles();
-        }
-      });
-
-      lista.appendChild(item);
-    });
+  if (error) {
+    console.error("Error cargando reservas:", error.message);
+    return;
   }
+
+  const { data: misPartidos, error: errorMis } = await supabase
+    .from("reservas_usuarios")
+    .select("reserva_id")
+    .eq("usuario_id", currentUser.id);
+
+  console.log("🙋 Mis partidos:", misPartidos);
+
+  if (errorMis) {
+    console.error("Error cargando mis partidos:", errorMis.message);
+    return;
+  }
+
+  const idsOcupados = misPartidos ? misPartidos.map(r => r.reserva_id) : [];
+  console.log("🛑 IDs ocupados:", idsOcupados);
+
+  const disponibles = reservas.filter(r =>
+    !idsOcupados.includes(r.id) && r.cupo_actual < r.cupo_max
+  );
+
+  console.log("✅ Disponibles:", disponibles);
+
+  const lista = document.getElementById("partidos-disponibles");
+  lista.innerHTML = "";
+
+  if (disponibles.length === 0) {
+    lista.innerHTML = `<li class="list-group-item">No hay partidos disponibles</li>`;
+    return;
+  }
+
+  disponibles.forEach(r => {
+    const item = document.createElement("li");
+    item.className = "list-group-item d-flex justify-content-between align-items-center";
+    item.innerHTML = `
+      <span>${r.canchas.nombre} - ${r.fecha} ${r.hora_inicio} | Cupo: ${r.cupo_actual}/${r.cupo_max}</span>
+      <button class="btn btn-sm btn-primary">Unirme</button>
+    `;
+
+    item.querySelector("button").addEventListener("click", async () => {
+      const { error } = await supabase
+        .from("reservas_usuarios")
+        .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
+
+      if (error) {
+        if (error.message.includes("duplicate key")) {
+          alert("⚠️ Ya estás unido a este partido.");
+        } else {
+          alert("❌ Error al unirse: " + error.message);
+        }
+      } else {
+        await supabase
+          .from("reservas")
+          .update({ cupo_actual: r.cupo_actual + 1 })
+          .eq("id", r.id);
+
+        alert("✅ Te uniste al partido!");
+        loadReservas();
+        loadPartidosDisponibles();
+      }
+    });
+
+    lista.appendChild(item);
+  });
+}
+
 
   document.getElementById("logout").addEventListener("click", async () => {
     await supabase.auth.signOut();
