--- a/dashboard.html
+++ b/dashboard.html
@@ -1,3 +1,4 @@
+```html
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -38,6 +39,7 @@
 
   async function checkSession() {
     const { data: { session } } = await supabase.auth.getSession();
+
     if (!session) {
       window.location.href = "login.html";
     } else {
@@ -45,6 +47,7 @@
       document.getElementById("user-info").textContent =
         `Has iniciado sesión como: ${currentUser.email}`;
 
+      // Chequear rol admin
       const { data: userData } = await supabase
         .from("usuarios")
         .select("rol")
@@ -90,83 +93,84 @@
   }
 
   // Partidos disponibles
-async function loadPartidosDisponibles() {
-  const { data: reservas, error } = await supabase
-    .from("reservas")
-    .select("id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, canchas(nombre)");
+  async function loadPartidosDisponibles() {
+    // 1. Todas las reservas
+    const { data: reservas, error } = await supabase
+      .from("reservas")
+      .select("id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, usuario_id, canchas(nombre)");
 
-  console.log("📋 Todas las reservas:", reservas);
+    if (error) {
+      console.error("Error cargando reservas:", error.message);
+      return;
+    }
 
-  if (error) {
-    console.error("Error cargando reservas:", error.message);
-    return;
-  }
+    // 2. Mis partidos (donde ya estoy anotado)
+    const { data: misPartidos, error: errorMis } = await supabase
+      .from("reservas_usuarios")
+      .select("reserva_id")
+      .eq("usuario_id", currentUser.id);
 
-  const { data: misPartidos, error: errorMis } = await supabase
-    .from("reservas_usuarios")
-    .select("reserva_id")
-    .eq("usuario_id", currentUser.id);
+    if (errorMis) {
+      console.error("Error cargando mis partidos:", errorMis.message);
+      return;
+    }
 
-  console.log("🙋 Mis partidos:", misPartidos);
+    const idsOcupados = misPartidos.map(r => r.reserva_id);
 
-  if (errorMis) {
-    console.error("Error cargando mis partidos:", errorMis.message);
-    return;
-  }
+    // 3. Filtrar: solo partidos de otros usuarios, con cupo libre y en los que NO estoy
+    const disponibles = reservas.filter(r =>
+      r.usuario_id !== currentUser.id &&
+      !idsOcupados.includes(r.id) &&
+      r.cupo_actual < r.cupo_max
+    );
 
-  const idsOcupados = misPartidos ? misPartidos.map(r => r.reserva_id) : [];
-  console.log("🛑 IDs ocupados:", idsOcupados);
+    // 4. Renderizar
+    const lista = document.getElementById("partidos-disponibles");
+    lista.innerHTML = "";
 
-  const disponibles = reservas.filter(r =>
-    !idsOcupados.includes(r.id) && r.cupo_actual < r.cupo_max
-  );
+    if (disponibles.length === 0) {
+      lista.innerHTML = `<li class="list-group-item">No hay partidos disponibles</li>`;
+      return;
+    }
 
-  console.log("✅ Disponibles:", disponibles);
+    disponibles.forEach(r => {
+      const item = document.createElement("li");
+      item.className = "list-group-item d-flex justify-content-between align-items-center";
+      item.innerHTML = `
+        <span>${r.canchas.nombre} - ${r.fecha} ${r.hora_inicio} | Cupo: ${r.cupo_actual}/${r.cupo_max}</span>
+        <button class="btn btn-sm btn-primary">Unirme</button>
+      `;
 
-  const lista = document.getElementById("partidos-disponibles");
-  lista.innerHTML = "";
+      // Botón para unirse
+      item.querySelector("button").addEventListener("click", async () => {
+        const { error } = await supabase
+          .from("reservas_usuarios")
+          .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
 
-  if (disponibles.length === 0) {
-    lista.innerHTML = `<li class="list-group-item">No hay partidos disponibles</li>`;
-    return;
-  }
-
-  disponibles.forEach(r => {
-    const item = document.createElement("li");
-    item.className = "list-group-item d-flex justify-content-between align-items-center";
-    item.innerHTML = `
-      <span>${r.canchas.nombre} - ${r.fecha} ${r.hora_inicio} | Cupo: ${r.cupo_actual}/${r.cupo_max}</span>
-      <button class="btn btn-sm btn-primary">Unirme</button>
-    `;
-
-    item.querySelector("button").addEventListener("click", async () => {
-      const { error } = await supabase
-        .from("reservas_usuarios")
-        .insert([{ reserva_id: r.id, usuario_id: currentUser.id }]);
-
-      if (error) {
-        if (error.message.includes("duplicate key")) {
-          alert("⚠️ Ya estás unido a este partido.");
+        if (error) {
+          if (error.message.includes("duplicate key")) {
+            alert("⚠️ Ya estás unido a este partido.");
+          } else {
+            alert("❌ Error al unirse: " + error.message);
+          }
         } else {
-          alert("❌ Error al unirse: " + error.message);
+          // Actualizar cupo_actual
+          await supabase
+            .from("reservas")
+            .update({ cupo_actual: r.cupo_actual + 1 })
+            .eq("id", r.id);
+
+          alert("✅ Te uniste al partido!");
+          loadReservas();
+          loadPartidosDisponibles();
         }
-      } else {
-        await supabase
-          .from("reservas")
-          .update({ cupo_actual: r.cupo_actual + 1 })
-          .eq("id", r.id);
+      });
 
-        alert("✅ Te uniste al partido!");
-        loadReservas();
-        loadPartidosDisponibles();
-      }
+      lista.appendChild(item);
     });
+  }
 
-    lista.appendChild(item);
-  });
-}
-
-
+  // Logout
   document.getElementById("logout").addEventListener("click", async () => {
     await supabase.auth.signOut();
     window.location.href = "login.html";
@@ -176,3 +180,4 @@ async function loadPartidosDisponibles() {
   </script>
 </body>
 </html>
+```
