--- a/perfil.html
+++ b/perfil.html
@@ -2,85 +2,95 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Perfil de Usuario</title>
-  <script src="https://unpkg.com/@supabase/supabase-js"></script>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    img { border-radius: 50%; width: 120px; height: 120px; object-fit: cover; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mi Perfil - Cancha360</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-  <h2>Mi Perfil</h2>
-  <div>
-    <img id="avatar" src="" alt="Avatar">
+  <div class="container mt-5">
+    <h1>👤 Mi Perfil</h1>
+    <p id="user-email"></p>
+
+    <!-- Avatar actual -->
+    <div class="mb-3">
+      <img id="avatar-img" src="" alt="Tu avatar" class="rounded-circle border" width="150" height="150">
+    </div>
+
+    <!-- Subir nuevo avatar -->
+    <div class="mb-3">
+      <label for="avatar-input" class="form-label">Cambiar avatar</label>
+      <input type="file" id="avatar-input" class="form-control" accept="image/*">
+    </div>
+
+    <button id="upload-btn" class="btn btn-success">Subir nuevo avatar</button>
+    <a href="dashboard.html" class="btn btn-secondary">Volver al Dashboard</a>
   </div>
-  <p><strong>Nombre:</strong> <span id="nombre"></span></p>
-  <p><strong>Email:</strong> <span id="email"></span></p>
 
-  <h3>Cambiar Avatar</h3>
-  <input type="file" id="avatar-input" accept="image/*">
-  <button onclick="subirAvatar()">Subir Avatar</button>
-
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
   <script>
     const SUPABASE_URL = "https://rcpwypqzahsfsudlkwaf.supabase.co";
-    const SUPABASE_KEY = "TU_API_KEY";
+    const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InJjcHd5cHF6YWhzZnN1ZGxrd2FmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTg5MTQwODIsImV4cCI6MjA3NDQ5MDA4Mn0.VPkdTAhTK_tZ6Re_lcdx5E3oxSDS2oYG8YDSATXtcl4"; 
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
     let currentUser = null;
 
-    async function cargarPerfil() {
-      const { data: { user } } = await supabase.auth.getUser();
-      if (!user) {
-        alert("Debes iniciar sesión");
+    async function loadProfile() {
+      const { data: { session } } = await supabase.auth.getSession();
+      if (!session) {
         window.location.href = "login.html";
         return;
       }
-      currentUser = user;
 
-      // Obtener datos del usuario desde la tabla "usuarios"
-      const { data, error } = await supabase
+      currentUser = session.user;
+      document.getElementById("user-email").textContent = `Conectado como: ${currentUser.email}`;
+
+      // Traer datos de la tabla usuarios
+      const { data: userData, error } = await supabase
         .from("usuarios")
-        .select("nombre, avatar_url")
-        .eq("id", user.id)
+        .select("avatar_url")
+        .eq("id", currentUser.id)
         .single();
 
-      document.getElementById("nombre").innerText = data?.nombre || user.email;
-      document.getElementById("email").innerText = user.email;
-      document.getElementById("avatar").src = data?.avatar_url || "https://via.placeholder.com/120";
+      if (userData && userData.avatar_url) {
+        document.getElementById("avatar-img").src = userData.avatar_url;
+      } else {
+        document.getElementById("avatar-img").src = "https://via.placeholder.com/150?text=Avatar";
+      }
     }
 
-    async function subirAvatar() {
-      const fileInput = document.getElementById("avatar-input").files[0];
-      if (!fileInput) {
+    // Subir avatar
+    document.getElementById("upload-btn").addEventListener("click", async () => {
+      const file = document.getElementById("avatar-input").files[0];
+      if (!file) {
         alert("Selecciona un archivo primero");
         return;
       }
 
-      // Subir imagen al bucket "avatars"
-      const { data, error } = await supabase.storage
+      const path = `${currentUser.id}/${file.name}`;
+      const { error: uploadError } = await supabase.storage
         .from("avatars")
-        .upload(`public/${currentUser.id}.png`, fileInput, { upsert: true });
+        .upload(path, file, { upsert: true });
 
-      if (error) {
-        alert("Error subiendo avatar: " + error.message);
+      if (uploadError) {
+        alert("❌ Error al subir: " + uploadError.message);
         return;
       }
 
       // Obtener URL pública
       const { data: publicUrl } = supabase.storage
         .from("avatars")
-        .getPublicUrl(`public/${currentUser.id}.png`);
+        .getPublicUrl(path);
 
-      // Guardar URL en la tabla usuarios
-      await supabase.from("usuarios").update({
-        avatar_url: publicUrl.publicUrl
-      }).eq("id", currentUser.id);
+      // Guardar en tabla usuarios
+      await supabase.from("usuarios")
+        .update({ avatar_url: publicUrl.publicUrl })
+        .eq("id", currentUser.id);
 
-      document.getElementById("avatar").src = publicUrl.publicUrl;
-      alert("Avatar actualizado!");
-    }
+      document.getElementById("avatar-img").src = publicUrl.publicUrl;
+      alert("✅ Avatar actualizado!");
+    });
 
-    cargarPerfil();
+    loadProfile();
   </script>
 </body>
 </html>
