--- a/dashboard.html
+++ b/dashboard.html
@@ -6,11 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dashboard - Cancha360</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .avatar {
+      width: 40px;
+      height: 40px;
+      border-radius: 50%;
+      object-fit: cover;
+    }
+  </style>
 </head>
 <body>
-  <div class="container mt-5">
+  <!-- Navbar con avatar y perfil -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container-fluid">
+      <a class="navbar-brand fw-bold" href="#">Cancha360</a>
+      <div class="d-flex align-items-center">
+        <span id="user-email" class="me-3"></span>
+        <a href="perfil.html">
+          <img id="user-avatar" src="https://via.placeholder.com/40" alt="Avatar" class="avatar">
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <div class="container mt-4">
     <h1>Bienvenido a tu Dashboard ⚽</h1>
-    <p id="user-info"></p>
 
     <!-- Botones de acción -->
     <div class="mb-4">
@@ -44,18 +64,24 @@
       window.location.href = "login.html";
     } else {
       currentUser = session.user;
-      document.getElementById("user-info").textContent =
-        `Has iniciado sesión como: ${currentUser.email}`;
+      document.getElementById("user-email").textContent = currentUser.email;
 
-      // Chequear rol admin
+      // Cargar datos del usuario (rol + avatar)
       const { data: userData } = await supabase
         .from("usuarios")
-        .select("rol")
+        .select("rol, avatar_url")
         .eq("id", currentUser.id)
         .single();
 
-      if (userData && userData.rol === "admin") {
-        document.getElementById("admin-create-court").classList.remove("d-none");
+      if (userData) {
+        // Mostrar avatar si tiene
+        if (userData.avatar_url) {
+          document.getElementById("user-avatar").src = userData.avatar_url;
+        }
+        // Mostrar botón de crear cancha si es admin
+        if (userData.rol === "admin") {
+          document.getElementById("admin-create-court").classList.remove("d-none");
+        }
       }
 
       loadReservas();
@@ -94,7 +120,6 @@
 
   // Partidos disponibles
   async function loadPartidosDisponibles() {
-    // 1. Todas las reservas
     const { data: reservas, error } = await supabase
       .from("reservas")
       .select("id, fecha, hora_inicio, hora_fin, cupo_actual, cupo_max, usuario_id, canchas(nombre)");
@@ -104,7 +129,6 @@
       return;
     }
 
-    // 2. Mis partidos (donde ya estoy anotado)
     const { data: misPartidos, error: errorMis } = await supabase
       .from("reservas_usuarios")
       .select("reserva_id")
@@ -117,14 +141,12 @@
 
     const idsOcupados = misPartidos.map(r => r.reserva_id);
 
-    // 3. Filtrar: solo partidos de otros usuarios, con cupo libre y en los que NO estoy
     const disponibles = reservas.filter(r =>
       r.usuario_id !== currentUser.id &&
       !idsOcupados.includes(r.id) &&
       r.cupo_actual < r.cupo_max
     );
 
-    // 4. Renderizar
     const lista = document.getElementById("partidos-disponibles");
     lista.innerHTML = "";
 
@@ -141,7 +163,6 @@
         <button class="btn btn-sm btn-primary">Unirme</button>
       `;
 
-      // Botón para unirse
       item.querySelector("button").addEventListener("click", async () => {
         const { error } = await supabase
           .from("reservas_usuarios")
@@ -154,7 +175,6 @@
             alert("❌ Error al unirse: " + error.message);
           }
         } else {
-          // Actualizar cupo_actual
           await supabase
             .from("reservas")
             .update({ cupo_actual: r.cupo_actual + 1 })
@@ -170,7 +190,6 @@
     });
   }
 
-  // Logout
   document.getElementById("logout").addEventListener("click", async () => {
     await supabase.auth.signOut();
     window.location.href = "login.html";
