--- a/dashboard.html
+++ b/dashboard.html
@@ -77,6 +77,8 @@
         // Mostrar avatar si tiene
         if (userData.avatar_url) {
           document.getElementById("user-avatar").src = userData.avatar_url;
+          console.log("👤 Datos usuario:", userData);
+
         }
         // Mostrar botón de crear cancha si es admin
         if (userData.rol === "admin") {
