--- a/dashboard.html
+++ b/dashboard.html
@@ -66,24 +66,27 @@
       currentUser = session.user;
       document.getElementById("user-email").textContent = currentUser.email;
 
-      // Cargar datos del usuario (rol + avatar)
+      // Cargar datos del usuario desde la tabla
       const { data: userData } = await supabase
         .from("usuarios")
         .select("rol, avatar_url")
         .eq("id", currentUser.id)
         .single();
 
-      if (userData) {
-        // Mostrar avatar si tiene
-        if (userData.avatar_url) {
-          document.getElementById("user-avatar").src = userData.avatar_url;
-          console.log("👤 Datos usuario:", userData);
+      // Avatar con fallback (1 = avatar personalizado, 2 = avatar de Google, 3 = placeholder)
+      let avatarUrl = "https://via.placeholder.com/40?text=👤";
 
-        }
-        // Mostrar botón de crear cancha si es admin
-        if (userData.rol === "admin") {
-          document.getElementById("admin-create-court").classList.remove("d-none");
-        }
+      if (userData && userData.avatar_url) {
+        avatarUrl = userData.avatar_url;
+      } else if (currentUser.user_metadata && currentUser.user_metadata.avatar_url) {
+        avatarUrl = currentUser.user_metadata.avatar_url;
+      }
+
+      document.getElementById("user-avatar").src = avatarUrl;
+
+      // Si es admin, mostrar botón
+      if (userData && userData.rol === "admin") {
+        document.getElementById("admin-create-court").classList.remove("d-none");
       }
 
       loadReservas();
